# CarConnectivity-connector-volkswagen-na

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup_requirements.txt
.github/workflows/: build.yml  build_and_publish.yml  codeql-analysis.yml
doc/: Config.md
src/carconnectivity_connectors/volkswagen/: _version.py  capability.py  charging.py  climatization.py  command_impl.py  connector.py  vehicle.py
src/carconnectivity_connectors/volkswagen/auth/: auth_util.py  openid_session.py  session_manager.py  vw_web_session.py  we_connect_session.py
src/carconnectivity_connectors/volkswagen/ui/: connector_ui.py
src/carconnectivity_connectors/volkswagen_na/: capability.py  charging.py  command_impl.py  connector.py  vehicle.py
src/carconnectivity_connectors/volkswagen_na/auth/: auth_util.py  myvw_session.py  openid_session.py  session_manager.py  vw_web_session.py  we_connect_session.py
src/carconnectivity_connectors/volkswagen_na/auth/helpers/: blacklist_retry.py
src/carconnectivity_connectors/volkswagen_na/ui/: connector_ui.py
test/integration_test/: carConnectivity.json
