[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "carconnectivity-connector-volkswagen-na"
description = "CarConnectivity connector for Volkswagen NA services"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [
    { name = "Till Steinbach" },
    { name = "Zack Cornelius" }
]
dependencies = [
    "carconnectivity>=0.8",
    "oauthlib~=3.3.1",
    "requests~=2.32.3",
    "pyjwt~=2.10",
    "pkce~=1.0.3",
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries"
]

[project.urls]

[tool.setuptools_scm]
write_to = "src/carconnectivity_connectors/volkswagen_na/_version.py"

[tool.pylint.format]
max-line-length=160
ignore-patterns= "_version.py"
